# varity-app-store

./: .env.example  .env.production  .gitignore  4EVERLAND_DEPLOYMENT_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  next.config.ts  package-lock.json  package.json  vercel.json
contracts/: .env.example  .gitignore  AGENT_3_DELIVERABLE.md  AGENT_DELIVERABLE.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  GET_STARTED.md  INDEX.md  Makefile  P1_08_09_COMPLETION_REPORT.md  QUICKSTART.md  README.md  START_HERE.md  Stylus.toml  deploy-arb-one.sh  deploy-now.sh  deploy-simple.sh  deploy.sh  deployment.config.json  export-abi.sh  initialize.py  test-deployment.sh  verify.sh
contracts/.github/workflows/: deploy.yml
contracts/scripts/: check-gas-price.sh  deploy-and-verify.sh  monitor-deployment.sh  post-deploy.sh  verify-setup.sh
contracts/solidity-baseline/: GAS_COMPARISON.md  README.md  SOLIDITY_GAS_BASELINE.md  gas-results.json  hardhat.config.js  package-lock.json  package.json
contracts/solidity-baseline/cache/: solidity-files-cache.json
contracts/solidity-baseline/contracts/: VarityAppRegistry.sol
contracts/solidity-baseline/scripts/: deploy-and-measure.js
contracts/src/: lib.rs  lib.rs.backup  main.rs
contracts/tests/: p1_08_09_tests.rs  unit_tests.rs
contracts/varity-app-registry/: Cargo.toml
contracts/varity-app-registry/src/: lib.rs
contracts/varity-payments/: Cargo.toml  Stylus.toml  deploy-alternative-rpc.sh  deploy-manual.sh  deploy-with-cast.sh
contracts/varity-payments/src/: lib.rs  main.rs
public/: ai.txt  (+2 more)
(+62 files in other folders)
