[package]
name = "varity-app-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "0.10"
alloy-sol-types = "1.3"
alloy-primitives = "1.3"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
ethers = "2.0"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = ['cfg(feature, values("export-abi", "contract-client-gen"))']

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "varity-app-registry"
path = "src/main.rs"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
