[package]
name = "varity-payments"
version = "0.1.0"
edition = "2021"
description = "Varity Payment Processing - App purchases (90/10 split) and developer billing"

[dependencies]
stylus-sdk = "0.10"
alloy-sol-types = "1.3"
alloy-primitives = "1.3"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
ethers = "2.0"

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "varity-payments"
path = "src/main.rs"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
